--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
-
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  position: relative;
+  z-index: 0;
+  font-family: 'Inter Tight', sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
